tests/baselines/reference/noUnusedLocals_selfReference.errors.txt
tests/cases/compiler/noUnusedLocals_selfReference.ts(3,10): error TS6133: 'f' is declared but its value is never read.
tests/cases/compiler/noUnusedLocals_selfReference.ts(5,14): error TS6133: 'g' is declared but its value is never read.
tests/cases/compiler/noUnusedLocals_selfReference.ts(9,7): error TS6133: 'C' is declared but its value is never read.
tests/cases/compiler/noUnusedLocals_selfReference.ts(12,6): error TS6133: 'E' is declared but its value is never read.
tests/cases/compiler/noUnusedLocals_selfReference.ts(14,19): error TS6133: 'm' is declared but its value is never read.


==== tests/cases/compiler/noUnusedLocals_selfReference.ts (5 errors) ====
    export {}; // Make this a module scope, so these are local variables.
    
    function f() {
             ~
!!! error TS6133: 'f' is declared but its value is never read.
        f;
        function g() {
                 ~
!!! error TS6133: 'g' is declared but its value is never read.
            g;
        }
    }
    class C {
          ~
!!! error TS6133: 'C' is declared but its value is never read.
        m() { C; }
    }
    enum E { A = 0, B = E.A }
         ~
!!! error TS6133: 'E' is declared but its value is never read.
    
    class P { private m() { this.m; } }
                      ~
!!! error TS6133: 'm' is declared but its value is never read.
    P;
    
    // Does not detect mutual recursion.
    function g() { D; }
    class D { m() { g; } }
    